--- a/package.json
+++ b/package.json
@@ -21,42 +21,53 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.0.1",
-    "@nestjs/core": "^7.5.5",
-    "@nestjs/platform-express": "^7.5.5",
-    "@nestjs/typeorm": "^8.0.4",
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/config": "^2.1.0",
+    "@nestjs/core": "^8.4.7",
+    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.2",
+    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/platform-socket.io": "^8.4.7",
+    "@nestjs/typeorm": "^8.1.3",
+    "@nestjs/websockets": "^8.4.7",
+    "@types/passport-jwt": "^3.0.6",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.5.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^7.5.5",
+    "@nestjs/cli": "^8.2.6",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.7",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
+    "@types/jest": "28.1.1",
+    "@types/node": "^17.0.43",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "jest": "28.1.1",
+    "prettier": "^2.7.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.2.3",
+    "ts-jest": "28.0.5",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.8.1",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
