--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.7",
     "@nestjs/jwt": "^8.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/platform-socket.io": "^8.4.7",
@@ -51,6 +52,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.43",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
