--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/platform-socket.io": "^8.4.7",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.1.3",
     "@nestjs/websockets": "^8.4.7",
     "@types/passport-jwt": "^3.0.6",
@@ -42,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
+    "sharp": "^0.30.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -54,6 +56,7 @@
     "@types/jest": "28.1.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.43",
+    "@types/sharp": "^0.30.4",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
